src/webparts/columnFormatter/components/ColumnFormatter.module.scss
@import '~@microsoft/sp-office-ui-fabric-core/dist/sass/_SPFabricCore.scss';

.columnFormatter {
  border: 1px solid;
  border-color: $ms-color-neutralLight;

  .app {
    position: relative;
    height: 200px;
  }

//***************
// Split Pane
//***************
  .SplitPane {
    :global {
      .Resizer {
        background: $ms-color-neutralLight;
        z-index: 1;
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        -moz-background-clip: padding;
        -webkit-background-clip: padding;
        background-clip: padding-box;
        -webkit-transition: all 1s ease;
        transition: all 0.5s ease;
        &:hover {
          -webkit-transition: all 1s ease;
          transition: all 0.5s ease;
        }

        &.vertical {
          width: 11px;
          margin: 0 -5px;
          border-left: 5px solid rgba(255, 255, 255, 0);
          border-right: 5px solid rgba(255, 255, 255, 0);
          cursor: col-resize;
          &:hover {
            border-left: 5px solid;
            border-right: 5px solid;
            border-color: $ms-color-neutralLighter;
            opacity: 0.5;
          }
        }
      }
    }
  }
  .SplitPaneInTab {
    height: calc(100% - 19px) !important;
    @extend .SplitPane
  }

//***************
// Tabs
//***************
  :global{
    .react-tabs {
      &__tab-list {
        //border-top: 1px solid;
        //border-top-color: $ms-color-neutralLight;
        margin: 0 0 10px;
        padding: 0;
        background-color: $ms-color-neutralLighter;
        position: absolute;
        bottom: 0;
        width: 100%;
        text-align: left;
        margin: 0;
      }
    
      &__tab {
        display: inline-block;
        //border: 1px solid transparent;
        //border-top: none;
        //top: -1px;
        position: relative;
        list-style: none;
        padding: 3px 6px 1px 6px;
        cursor: pointer;
        font-size: 11px;
    
        &--selected {
          background: #fff;
          border-color: $ms-color-neutralLight;
          color: $ms-color-themeDarkAlt;
        }
    
        &--disabled {
          color: $ms-color-neutralTertiaryAlt;
          cursor: default;
        }
    
        &:focus {
          box-shadow: 0 0 5px $ms-color-themePrimary;
          border-color: $ms-color-themePrimary;
          outline: none;
    
          &:after {
            content: "";
            position: absolute;
            height: 5px;
            left: -4px;
            right: -4px;
            top: -5px;
            background: #fff;
          }
        }

        //Tab Label
        i {
          padding-right: 4px;
          color: $ms-color-themeDarkAlt;
        }
        span {
          line-height: 13px;
          vertical-align: top;
        }
      }
    
      &__tab-panel {
        display: none;
    
        &--selected {
          display: block;
        }
      }
    }
  }

//***************
// Panels
//***************
  .panel {
    padding:5px;
    overflow: hidden;

    .panelHeader {
      font-weight: bold;
    }

    .dataTable {
      margin:4px;
      border-collapse: collapse;
      border: 1px solid;
      border-color: $ms-color-themeLight;

      :global{
        .ms-TextField {
          margin-bottom: 0;
          padding: 1px;

          input {
            padding:0 6px 0 6px;
          }
        }
        .ms-TextField-fieldGroup {
          height:26px;
        }

        .ms-Toggle {
          margin-bottom: 0;
          padding: 1px;
          text-align: center;

          .ms-Toggle-innerContainer{
            vertical-align: middle;
          }
        }
      }

      thead td {
        background-color: $ms-color-themeLighter;
        border-bottom: 1px solid;
        border-color: $ms-color-themeLight;
      }
      tbody td {
        border-right: 1px solid;
        border-left: 1px solid;
        border-color: $ms-color-themeLight;
      }

      .subPropBox {
        display: flex;
        .mainBox {
          flex-grow: 1;
        }
        .buttonBox {
          width: 24px;
        }
      }
    }
  }
}

.tbSpinButtonOverride {
  & > div > div {
    margin:0;
  }
}
.tbTextFieldOverride {
  label {
    color: white;
  }
}

